# slidown

./: .coveragerc  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  contributors.txt  delete_unused_libraries.py  pyproject.toml  qimage.py  requirements-dev.txt  requirements.txt  slides.py  slidown.py  slidown.spec  test_qimage.py  test_slides.py
.github/: Dockerfile.appimage  release-template.md
.github/workflows/: build-container.yml  release.yml  test.yml
appimage/: AppImageBuilder.yml
icon/: slidown.xcf  slidown_no_title.xcf
integration_tests/: integration_test_core.py  pdf_export_integration_test.py
slidown/: __init__.py  __version__.py  config.py  core.py  file_utils.py  gui.py  main.py  monitor.py  qimage.py  slides.py  slidown.py
slidown/integration_tests/: integration_test_core.py
slidown/tests/: test_config.py  test_core.py  test_monitor.py  test_qimage.py  test_qpixmap.py  test_slides.py  test_utils_testing.py  utils.py  utils_testing.py
tests/: test_config.py  test_core.py  test_file_utils.py  test_monitor.py  test_pdf_export.py
