[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slidown"
dynamic = ["version"]
description = "A Deckset-like presentation tool using reveal.js and Pandoc"
readme = "README.md"
license = "GPL-3.0-only"
authors = [
    {name = "Riccardo Marotti", email = "slidown@ric.mozmail.com"}
]
maintainers = [
    {name = "Riccardo Marotti", email = "slidown@ric.mozmail.com"}
]
keywords = ["presentation", "markdown", "reveal.js", "pandoc", "slides"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup :: HTML",
]
requires-python = ">=3.8"
dependencies = [
    "pypandoc",
    "beautifulsoup4",
    "appdirs",
    "PyQt5",
    "PyQtWebEngine",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov>=2.5.1",
    "python-coveralls",
    "pyinstaller",
]

[project.urls]
Homepage = "https://github.com/riccardomarotti/slidown"
Repository = "https://github.com/riccardomarotti/slidown"
"Bug Tracker" = "https://github.com/riccardomarotti/slidown/issues"

[project.scripts]
slidown = "slidown.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["slidown*"]
exclude = ["tests*", "integration_tests*"]

[tool.setuptools.package-data]
"slidown" = ["reveal.js/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests", "integration_tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=slidown --cov-report=xml"

[tool.coverage.run]
source = ["slidown"]
omit = ["tests/*", "integration_tests/*"]

[tool.setuptools.dynamic]
version = {attr = "slidown.__version__.__version__"}